--- a/util/gdal/CMakeLists.txt
+++ b/util/gdal/CMakeLists.txt
@@ -2,18 +2,19 @@
 list(APPEND GDAL_UTIL_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/dataset.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/dem.cpp
-        ${CMAKE_CURRENT_LIST_DIR}/src/target_dataset.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/src/target_dataset.cc
         )
 
 list(APPEND GDAL_UTIL_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/include
         ${CMAKE_CURRENT_LIST_DIR}/../common/include
+        ${CMAKE_CURRENT_LIST_DIR}/../cuda/include
         )
 
 add_library(gdal-util-obj
         OBJECT
         ${GDAL_UTIL_SOURCES}
-        )
+        include/transform_constants.h)
 target_include_directories(gdal-util-obj
         PRIVATE
         ${GDAL_UTIL_INCLUDE_DIRS}
@@ -34,4 +35,5 @@ set_target_properties(gdal-util-static
 target_link_libraries(gdal-util-static
         PUBLIC
         gdal
+        cuda_util-static
         )
