--- a/app/unit_test/CMakeLists.txt
+++ b/app/unit_test/CMakeLists.txt
@@ -1,17 +1,10 @@
 
 list(APPEND APP_UNIT_TEST_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/algorithm_parameters.cc
-        )
-
-list(APPEND APP_UNIT_TEST_INCLUDES
-        ${CMAKE_CURRENT_LIST_DIR}/../include
+        ${CMAKE_CURRENT_LIST_DIR}/dem_assistant.cc
         )
 
 add_executable(app_unit_test ${APP_UNIT_TEST_SOURCES})
-target_include_directories(app_unit_test
-        PRIVATE
-        ${APP_UNIT_TEST_INCLUDES}
-        )
 target_link_libraries(app_unit_test
         PRIVATE
         stdc++fs
