--- a/algs/sentinel1_calibrate/CMakeLists.txt
+++ b/algs/sentinel1_calibrate/CMakeLists.txt
@@ -11,6 +11,7 @@ list(APPEND SENTINEL_1_CALIBRATE_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/../../util/sentinel1/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include/snap-core/datamodel
+        ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include/snap-core/dataio
         ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include/snap-engine-utilities/datamodel/metadata
         ${CMAKE_CURRENT_LIST_DIR}/../../util/exotic_operations/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/common/include
@@ -58,6 +59,7 @@ target_link_libraries(sentinel1-calibrate-static
 add_library(sentinel1-calibrate-shared
         SHARED
         $<TARGET_OBJECTS:sentinel1-calibrate-obj>
+        ${CMAKE_CURRENT_LIST_DIR}/src/sentinel1_calibrate_executor_shared.cc
         )
 
 target_include_directories(sentinel1-calibrate-shared
@@ -68,6 +70,7 @@ target_include_directories(sentinel1-calibrate-shared
 set_target_properties(sentinel1-calibrate-shared
         PROPERTIES
         OUTPUT_NAME sentinel1-calibrate
+        LIBRARY_OUTPUT_DIRECTORY ${ALUS_BINARY_OUTPUT_DIR}
         )
 
 target_link_libraries(sentinel1-calibrate-shared
