--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -30,6 +30,7 @@ list(APPEND TEST_SOURCES
         src/burst_indices_kernels.cu
         src/compute_burst_offset_test.cc
         src/multithreading_test.cc
+        src/sentinel_1_calibrate_test.cc
         )
 
 add_executable(unit_test ${TEST_SOURCES})
@@ -48,6 +49,7 @@ target_link_libraries(unit_test
         sar-geocoding-test-static
         coherence-static
         multi_threading-static
+        sentinel1-calibrate-static
         )
 set_target_properties(unit_test
         PROPERTIES
