--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,12 @@ if (CUDA_FOUND)
     set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --Werror all-warnings")
     #    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --resource-usage")
     INCLUDE_DIRECTORIES(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
+    if (CUDA_ARCH)
+        set(CMAKE_CUDA_ARCHITECTURES ${CUDA_ARCH} CACHE STRING "CUDA architectures")
+    else (CUDA_ARCH)
+        set(CMAKE_CUDA_ARCHITECTURES 52 CACHE STRING "CUDA architectures")
+    endif ()
+    message(STATUS "CUDA binary code will be generated for the following architecture(s) - ${CMAKE_CUDA_ARCHITECTURES}")
 else (CUDA_FOUND)
     message(FATAL_ERROR "No CUDA toolchain found. Exiting.")
 endif ()
