alus-217 Test results' storage in S3 bucket.
* Refactored existing CI build scripts
* Created IAM user "sid_man" who has rights to perform CI builds and
upload results to bucket
* Added scripts which enable uploading to bucket. Currently coherence
and terrain correction integration test pictures are uploaded.
* http://alus-ci-artifacts1.s3.amazonaws.com/ is the bucket address

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,17 +10,24 @@ clone:
 
 pipelines:
   pull-requests:
-    '**': #this runs as default for any branch not elsewhere defined
-      - step:
+    '**': # This runs as default for any branch not elsewhere defined
+      - step: # Setup
           script:
-            - echo "BITBUCKET_CLONE_DIR=$BITBUCKET_CLONE_DIR"
-            - echo "BITBUCKET_COMMIT=$BITBUCKET_COMMIT"
-            - echo "BITBUCKET_REPO_SLUG=$BITBUCKET_REPO_SLUG"
-            - ls -la $BITBUCKET_CLONE_DIR
-            - echo $BITBUCKET_BUILD_NUMBER
-            - echo ${BITBUCKET_BUILD_NUMBER}
-            - cd $BITBUCKET_CLONE_DIR
-            - git ls-files --cached --recurse-submodules | tar Tczf - archive.tar.gz
-            - mv archive.tar.gz ~/.
             - cd ~
-            - ./run_on_ec2_instance.sh "archive.tar.gz"
+            - mkdir .aws
+            - cd .aws
+            - echo "[profile sid_man]" > config
+            - echo "aws_access_key_id = $SID_MAN_ACCESS_KEY_ID" >> config
+            - echo "aws_secret_access_key = $SID_MAN_SECRET_ACCESS_KEY" >> config
+            - echo "region = eu-central-1" >> config
+            - echo "output = json" >> config
+            - cd $BITBUCKET_CLONE_DIR
+            - mkdir -p $BITBUCKET_CLONE_DIR/build/test-reports
+            - git ls-files --cached --recurse-submodules | tar Tczf - archive.tar.gz
+            - $BITBUCKET_CLONE_DIR/build-automation/run_ci_on_ec2_instance.sh "archive.tar.gz" $G3_4xLARGE_INSTANCE_ID "sid_man"
+            - date_stamp=$(date +"%Y_%m_%d_%H%M")
+            - cd $BITBUCKET_CLONE_DIR/build/ci-artifacts/
+            - >
+              for file in *; do
+                  [ -f "$file" ] && $BITBUCKET_CLONE_DIR/build-automation/put_to_alus_ci_artifacts.sh "${BITBUCKET_BUILD_NUMBER}_${BITBUCKET_BRANCH}_${date_stamp}" $file sid_man
+              done 
