--- a/test/tie_point_grid/CMakeLists.txt
+++ b/test/tie_point_grid/CMakeLists.txt
@@ -7,6 +7,7 @@ list(APPEND TIE_POINT_GRID_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/cuda/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/common/include
+        ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include/snap-core/datamodel
         )
 
 add_library(tiePointGrid-test-obj
@@ -25,6 +26,11 @@ add_library(tiePointGrid-test-static
 target_include_directories(tiePointGrid-test-static
         PUBLIC
         ${TIE_POINT_GRID_INCLUDE_DIRS}
+        )
+
+target_link_libraries(tiePointGrid-test-static
+        PUBLIC
+        snap-engine-static
         )
 
 set_target_properties(tiePointGrid-test-static
