SNAPGPU-215 Backgeocoding now supports algbond

--- a/algs/backgeocoding/CMakeLists.txt
+++ b/algs/backgeocoding/CMakeLists.txt
@@ -3,6 +3,7 @@ list(APPEND BACKGEOCODING_SOURCES
         ${CMAKE_CURRENT_LIST_DIR}/src/backgeocoding.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/backgeocoding_controller.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/backgeocoding_worker.cc
+        ${CMAKE_CURRENT_LIST_DIR}/src/backgeocoding_bond.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/bilinear.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/deramp_demod.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/slave_pixpos.cu
@@ -20,6 +21,8 @@ list(APPEND BACKGEOCODING_INCLUDE_DIRS
         ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include
         ${CMAKE_CURRENT_LIST_DIR}/../../util/snap-engine/include/snap-core/datamodel
         ${CMAKE_CURRENT_LIST_DIR}/../../util/cuda/include
+        ${CMAKE_CURRENT_LIST_DIR}/../algorithm_bond/include
+        ${CMAKE_CURRENT_LIST_DIR}/../../app/include
         )
 
 add_library(backgeocoding-obj
@@ -50,4 +53,29 @@ target_link_libraries(backgeocoding-static
         sentinel1-util-static
         cuda_util-static
         snap-engine-static
+        Boost::program_options
+        )
+
+add_library(backgeocoding-shared
+        SHARED
+        $<TARGET_OBJECTS:backgeocoding-obj>
+        )
+target_include_directories(backgeocoding-shared
+        PUBLIC
+        ${BACKGEOCODING_INCLUDE_DIRS}
+        )
+set_target_properties(backgeocoding-shared
+        PROPERTIES
+        OUTPUT_NAME backgeocoding
+        LIBRARY_OUTPUT_DIRECTORY ${ALUS_BINARY_OUTPUT_DIR}
+        )
+
+target_link_libraries(backgeocoding-shared
+        PUBLIC
+        gdal-util-static
+        exotic_operations-static
+        sentinel1-util-static
+        cuda_util-static
+        snap-engine-static
+        Boost::program_options
         )
