alus-252 Calibration routine implementation.
Includes the following required for the full chain:

1) Product support for TC
2) Deburst tiepointgrid bugfix.

Fixes deburst test by removing faulting implementation.

Adds calibration chain nightly test.

Calibration routine implementation.

Includes the following required for the full chain:

1) Product support for TC
2) Deburst tiepointgrid bugfix.

Fixes deburst test by removing faulting implementation.

Adds calibration chain nightly test.

Calibration routine supports output directory or output path.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,6 +91,7 @@ add_subdirectory(algs/topsar-deburst-op)
 add_subdirectory(algs/coherence_estimation_routine)
 add_subdirectory(algs/coregistration)
 add_subdirectory(algs/topsar_split)
+add_subdirectory(algs/calibration_routine)
 
 # Test helpers
 add_subdirectory(test/range_doppler_geocoding)
